--- a/Anchor.toml
+++ b/Anchor.toml
@@ -17,3 +17,5 @@ wallet = "~/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+buy_team_test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/buy_team_test.ts"
+simple_initialize_test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/simple_initialize_test.ts"
