--- a/programs/sports/Cargo.toml
+++ b/programs/sports/Cargo.toml
@@ -14,9 +14,13 @@ cpi = ["no-entrypoint"]
 no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
-idl-build = ["anchor-lang/idl-build"]
+idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 
 
 [dependencies]
 anchor-lang = "0.31.1"
+anchor-spl = "0.31.1"
+serde_json = "1.0"
+mpl-token-metadata = "5.1.0"
+
 
