--- a/programs/sports/Cargo.toml
+++ b/programs/sports/Cargo.toml
@@ -24,3 +24,8 @@ serde_json = "1.0"
 mpl-token-metadata = "5.1.0"
 
 
+[profile.release]
+opt-level = "z"       # optimiza para tamaño
+lto = true            # Link-Time Optimization
+codegen-units = 1     # menos unidades de compilación mejora LTO
+panic = "abort"       # elimina manejo de panic costoso
