--- a/programs/sports/Cargo.toml
+++ b/programs/sports/Cargo.toml
@@ -22,6 +22,7 @@ anchor-lang = "0.31.1"
 anchor-spl = "0.31.1"
 serde_json = "1.0"
 mpl-token-metadata = "5.1.0"
+base64 = "0.21.0"
 
 
 [profile.release]
