--- a/Anchor.toml
+++ b/Anchor.toml
@@ -19,6 +19,7 @@ wallet = "~/.config/solana/id.json"
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
 buy_team_test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/buy_team_test.ts"
 simple_initialize_test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/simple_initialize_test.ts"
+stake_team_test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/stake_team_test.ts"
 
 [profile.release]
 opt-level = "z"       # optimiza para tamaño
