--- a/Anchor.toml
+++ b/Anchor.toml
@@ -6,14 +6,17 @@ resolution = true
 skip-lint = false
 
 [programs.localnet]
-sports = "5BqZmNdV2dgBEJ4aoid1LrKzXtJJR1fLskKUzygynDU9"
+sports = "CDf5QvcmJzaf4i6FSioCbMCayuPsStXDTPxNijMiE9Cq"
+
+[programs.devnet]
+sports = "CDf5QvcmJzaf4i6FSioCbMCayuPsStXDTPxNijMiE9Cq"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "localnet"
-wallet = "~/.config/solana/id.json"
+cluster = "devnet"
+wallet = "~/.config/solana/phantom-keypair.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
