--- a/programs/sports/Cargo.toml
+++ b/programs/sports/Cargo.toml
@@ -18,7 +18,7 @@ idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 
 
 [dependencies]
-anchor-lang = "0.31.1"
+anchor-lang = {version = "0.31.1", features = ["init-if-needed"]}
 anchor-spl = "0.31.1"
 serde_json = "1.0"
 mpl-token-metadata = "5.1.0"
